dark mode and button fixes

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -16,6 +16,10 @@ $gray: #8E8E8E;
     color-scheme: only light;
 }
 
+html {
+    forced-color-adjust: none;
+}
+
 html,    
     body {
     scroll-behavior: smooth;
@@ -52,7 +56,7 @@ html,
         'GRAD' 0,
         'opsz' 24
       }
-      .btn__wrapper {
+    .btn__wrapper {
         text-align: center;
         .btn {
             font-family: "DM Sans", sans-serif;
@@ -67,6 +71,7 @@ html,
             transition: 0.1s ease-in;
             margin: 0 auto;
             margin-top: 30px;
+            will-change: background-color;
             &:hover {
                 background-color: $white;
                 border: 3px solid $black;
@@ -75,8 +80,7 @@ html,
             &:active {
                 transform: scale(0.92);
             }
-        }
-        
+        }  
     }
 }
 
@@ -360,6 +364,8 @@ header {
     padding: 72px 0px;
     border-top: 3px solid $black;
     overflow: hidden;
+    transform: translateZ(0);
+    isolation: isolate; 
     @media (max-width: 1023px) {
         padding: 32px;
     }
@@ -520,6 +526,8 @@ header {
         max-width: 800px;
         text-align: center;
         margin: 0 auto;
+        transform: translateZ(0);
+        isolation: isolate; 
         h3 {
             line-height: 1.1;
             margin-bottom: 16px;
@@ -530,6 +538,11 @@ header {
         }
         .btn__wrapper {
             text-align: center;
+            .btn {
+                &:hover {
+                    background-color: $beige;
+                }
+            }
         }
         @media (max-width: 768px) {
             padding: 72px 32px;
